--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="number" id="number-fycs">--</div>
       </div>
       <div class="picker">
-        <div class="title">FYDA</div>
+        <div class="title">FYDS</div>
         <div class="number" id="number-fyda">--</div>
       </div>
     </div>
@@ -96,8 +96,8 @@
   <script>
     // Customizable number ranges:
     const RANGES = {
-      fycs: { min: 1, max: 60 },
-      fyda: { min: 1, max: 60 }
+      fycs: { min: 1, max: 71 },
+      fyda: { min: 1, max: 66 }
     };
 
     function startRoll(className) {
